force-app/main/default/objects/Trainer__c/fields/Trainer_Address__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Address__c</fullName>
    <label>Trainer Address</label>
    <type>TextArea</type>
</CustomField>