force-app/main/default/objects/Trainer__c/fields/Trainer_DOJ__c.field-meta.xml
<CustomField>
    <fullName>Trainer_DOJ__c</fullName>
    <label>Trainer DOJ</label>
    <type>Date</type>
</CustomField>