force-app/main/default/objects/Trainer__c/fields/Trainer_Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Father_Name__c</fullName>
    <label>Trainer Father Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>