force-app/main/default/objects/Trainer__c/fields/Trainer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Phone__c</fullName>
    <label>Trainer Phone</label>
    <type>Phone</type>
</CustomField>