force-app/main/default/objects/Trainer__c/fields/Trainer_salary__c.field-meta.xml
<CustomField>
    <fullName>Trainer_salary__c</fullName>
    <label>Trainer_salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>